<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light_background"
    tools:context=".ui.fragment.profile.ProfileFragment">

    <!-- Event Image -->

    <ImageView
        android:id="@+id/userPFP"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:contentDescription="User PFP"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_menu_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPFP">

        <Button
            android:id="@+id/uploadPFP"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Upload" />

        <Button
            android:id="@+id/removePFP"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remove"
            android:visibility="gone" /> <!-- Initially hidden -->
    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#3D5AFE"
        android:text="Confirm Changes"
        app:icon="@drawable/baseline_check_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:background="@drawable/white_card_background"
        app:layout_constraintBottom_toTopOf="@+id/confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/input_background"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            android:padding="10dp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:backgroundTint="@color/primary_blue"
            android:inputType="text"
            android:maxLength="80"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textAlignment="textEnd"
            android:minHeight="48dp"
            android:textColorLink="#3D5AFE"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/input_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextUserEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3D5AFE"
            android:ems="10"
            android:hint="@string/email"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:inputType="textEmailAddress"
            android:maxLength="255"
            android:minHeight="48dp"
            android:textAlignment="textEnd"
            android:textColorLink="#3D5AFE"
            android:textSize="16sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/input_background"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userPhone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/phone_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextUserPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:backgroundTint="#3D5AFE"
            android:ems="10"
            android:hint="@string/phone_number"
            android:textAlignment="textEnd"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorLink="#3D5AFE"
            android:textSize="16sp" />
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>