...
                                android:layout_height="wrap_content"
                                android:text="@string/name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="@string/email"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...
                                android:layout_height="wrap_content"
                                android:text="@string/phone_number"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/profile_phone_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="viewEnd"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textSize="16sp" />

...


    </ScrollView>


    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="172dp"
        android:layout_height="53dp"
        android:layout_columnWeight="1"
        android:layout_margin="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
...
