<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_create_facility"
        android:name="com.example.employ_events.ui.fragment.facility.CreateFacilityFragment"
        tools:layout="@layout/create_facility">
    </fragment>
...
        <action
            android:id="@+id/action_nav_facility_to_nav_edit_facility"
            app:destination="@id/nav_edit_facility" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.employ_events.ui.fragment.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
...
        <action
            android:id="@+id/action_addEventFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_registered_events"
        android:name="com.example.employ_events.ui.fragment.event.RegisteredEventsFragment"
        android:label="Registered Events"
        tools:layout="@layout/fragment_registered_events" >
        <action
            android:id="@+id/action_nav_registered_events_to_eventDetailsFragment"
            app:destination="@id/eventDetailsFragment" />
...
        android:id="@+id/eventDetailsFragment"
        android:name="com.example.employ_events.ui.fragment.event.EventDetailsFragment"
        android:label="Event Details"
        tools:layout="@layout/event_details">

        <!-- Add a back action if needed
         Jasleen's code -->
        <action
            android:id="@+id/action_eventDetailsFragment_to_eventListFragment"
            app:destination="@id/eventListFragment" />
        <action
            android:id="@+id/action_eventDetailsFragment_to_nav_edit_profile"
            app:destination="@id/nav_edit_profile" />
...
